--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      name: Deploy to GitHub pages
-      id: deployment
-      uses: actions/deploy-pages@v1
+      - name: Deploy to GitHub pages
+        id: deployment
+        uses: actions/deploy-pages@v1
